data/derived/comb/progs/unify/prog2647.ml.out
Characters 128-129:
  if ( (List.length s) = (List.length x) )
                                      ^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
